--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 20 23:43:28 EST 2013
+#Thu Feb 21 17:27:01 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -62,7 +62,6 @@ label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u8981\u6C42\u85AA\u6C34
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_8blancspace=\         
 label_public_balance=\u60A8\u7684\u8D26\u6237\u4F59\u989D\uFF1A{0}\u91D1\u5E01
 label_public_expectedSalary=\u85AA\u6C34\u8981\u6C42\uFF1A{0}\u91D1\u5E01/\u6708
 label_public_firesomeone=\u4E0D\u518D\u9700\u8981\u4ED6\u4E86\uFF0C\u62B1\u6B49\uFF01
@@ -92,3 +91,10 @@ menu_item_twitter_list_label=Twitters
 menu_item_twitter_new_label=Twitter
 menu_item_useraccount_list_label=User Accounts
 menu_item_useraccount_new_label=User Account
+relayout_close=\u9690\u85CF
+relayout_list_size=\u663E\u793A\u5185\u5BB9\u6761\u6570\uFF1A
+relayout_move_down=\u5411\u4E0B\u79FB
+relayout_move_left=\u5411\u5DE6\u79FB
+relayout_move_right=\u5411\u53F3\u79FB
+relayout_move_up=\u5411\u4E0A\u79FB
+relayout_reset=\u91CD\u65B0\u5E03\u5C40
