--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 20 23:43:28 EST 2013
+#Thu Feb 21 17:27:01 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -62,7 +62,6 @@ label_com_aeiou_bigbang_domain_useraccount_password=Password *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_8blancspace=\        
 label_public_balance=Your Balance\: {0} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=It's time to say Good-Bye, sorry\!
@@ -92,3 +91,10 @@ menu_item_twitter_list_label=Twitters
 menu_item_twitter_new_label=Twitter
 menu_item_useraccount_list_label=User Accounts
 menu_item_useraccount_new_label=User Account
+relayout_close=hide
+relayout_list_size=items to display
+relayout_move_down=move down
+relayout_move_left=move to left
+relayout_move_right=move to right
+relayout_move_up=move up
+relayout_reset=relayout
